log/build_2022-11-12_00-42-34/ros2_robotx/stderr.log
  File "/home/adept/ros2_ws_2/install/ros2_robotx/lib/python3.8/site-packages/ros2_robotx/drone_control.py", line 282
    dk.landing_pad_finder(self.vehicle, self.cap, \
                        self.vehicle.location.global_relative_frame.alt, self.newimg_pub):
                                                   
                              ^
SyntaxError: invalid syntax

